replace boost::fielsystem with std::filesystem
Signed-off-by: Zhiting Zhu <zhitingz@cs.utexas.edu>

--- a/MicroBenchmark/CMakeLists.txt
+++ b/MicroBenchmark/CMakeLists.txt
@@ -2,9 +2,8 @@ PROJECT (Cavalia)
 file (GLOB SRC_LIST "*.cpp")
 ADD_EXECUTABLE (micro_benchmark ${SRC_LIST})
 
-TARGET_LINK_LIBRARIES (micro_benchmark libjemalloc.so libdatabase.so 
-	liblz4.so libcityhash.so libpapi.so libnuma.so libboost_filesystem.so libboost_system.so libboost_date_time.so libboost_thread.so)
-TARGET_LINK_LIBRARIES (micro_benchmark pthread rt)
+# TARGET_LINK_LIBRARIES (micro_benchmark libjemalloc.so libcityhash.so libpapi.so boost_system boost_date_time libboost_thread)
+TARGET_LINK_LIBRARIES (micro_benchmark jemalloc_pic database_static liblz4.a libnuma.a libpapi.a libboost_thread.a pthread rt)
 INSTALL (TARGETS micro_benchmark
 	RUNTIME DESTINATION bin
-	)
+)
