--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,19 +1,20 @@
-SET (CMAKE_C_COMPILER "gcc")
-SET (CMAKE_CXX_COMPILER "g++")
 PROJECT (Cavalia)
-SET (CMAKE_CXX_FLAGS "-std=c++11 -Wno-deprecated-declarations -DOCC" CACHE INTERNAL "compiler options" FORCE)
-SET (CMAKE_CXX_FLAGS_DEBUG "-O0 -g" CACHE INTERNAL "compiler options" FORCE)
+cmake_minimum_required(VERSION 3.21)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+add_compile_options("$<$<COMPILE_LANGUAGE:CXX>:-g>")
+add_compile_options("$<$<COMPILE_LANGUAGE:C>:-g>")
+SET (CMAKE_CXX_FLAGS "-Wno-deprecated-declarations -DOCC" CACHE INTERNAL "compiler options" FORCE)
+SET (CMAKE_CXX_FLAGS_DEBUG "-O0" CACHE INTERNAL "compiler options" FORCE)
 SET (CMAKE_CXX_FLAGS_RELEASE "-O3" CACHE INTERNAL "compiler options" FORCE)
 IF (NOT CMAKE_BUILD_TYPE)
 	SET (CMAKE_BUILD_TYPE "Release")
 ENDIF ()
 MESSAGE (STATUS "Build type: ${CMAKE_BUILD_TYPE}")
-CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
 
 INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Common)
 INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Database)
 
-LINK_DIRECTORIES (${PROJECT_SOURCE_DIR}/build/Database)
 ADD_SUBDIRECTORY (Database)
 ADD_SUBDIRECTORY (TpccBenchmark)
 ADD_SUBDIRECTORY (MicroBenchmark)
