compile occ and silo version
Signed-off-by: Zhiting Zhu <zhitingz@cs.utexas.edu>

--- a/Database/CMakeLists.txt
+++ b/Database/CMakeLists.txt
@@ -1,13 +1,32 @@
 PROJECT (Cavalia)
 file (GLOB_RECURSE SRC_LIST "*.cc" "*.cpp")
-ADD_LIBRARY (database_static STATIC ${SRC_LIST})
-ADD_LIBRARY (database_shared SHARED ${SRC_LIST})
-TARGET_LINK_LIBRARIES (database_shared liblz4.so)
-TARGET_LINK_LIBRARIES (database_shared libpapi.so libjemalloc.so)
-target_link_libraries(database_static liblz4.a libpapi.a libjemalloc_pic.a)
-SET_TARGET_PROPERTIES (database_static PROPERTIES OUTPUT_NAME "database" CLEAN_DIRECT_OUTPUT 1)
-SET_TARGET_PROPERTIES (database_shared PROPERTIES OUTPUT_NAME "database" CLEAN_DIRECT_OUTPUT 1)
-INSTALL (TARGETS database_static database_shared
+set(shared_deps liblz4.so libpapi.so)
+set(static_deps liblz4.a libpapi.a)
+set(shared_deps ${shared_deps} mimalloc)
+set(static_deps ${static_deps} mimalloc-static)
+
+add_library (database_occ_static STATIC ${SRC_LIST})
+add_library (database_occ_shared SHARED ${SRC_LIST})
+target_link_libraries (database_occ_shared ${shared_deps})
+target_link_libraries(database_occ_static ${static_deps})
+target_compile_definitions(database_occ_shared PUBLIC OCC)
+target_compile_definitions(database_occ_static PUBLIC OCC)
+set_target_properties (database_occ_static PROPERTIES OUTPUT_NAME "database_occ" CLEAN_DIRECT_OUTPUT 1)
+set_target_properties (database_occ_shared PROPERTIES OUTPUT_NAME "database_occ" CLEAN_DIRECT_OUTPUT 1)
+INSTALL (TARGETS database_occ_static database_occ_shared
+	ARCHIVE DESTINATION bin
+	LIBRARY DESTINATION bin
+)
+
+add_library (database_silo_static STATIC ${SRC_LIST})
+add_library (database_silo_shared SHARED ${SRC_LIST})
+target_link_libraries (database_silo_shared ${shared_deps})
+target_link_libraries(database_silo_static ${static_deps})
+target_compile_definitions(database_silo_shared PUBLIC SILO)
+target_compile_definitions(database_silo_static PUBLIC SILO)
+set_target_properties (database_silo_static PROPERTIES OUTPUT_NAME "database_silo" CLEAN_DIRECT_OUTPUT 1)
+set_target_properties (database_silo_shared PROPERTIES OUTPUT_NAME "database_silo" CLEAN_DIRECT_OUTPUT 1)
+INSTALL (TARGETS database_silo_static database_silo_shared
 	ARCHIVE DESTINATION bin
 	LIBRARY DESTINATION bin
 )
