--- a/MicroBenchmark/CMakeLists.txt
+++ b/MicroBenchmark/CMakeLists.txt
@@ -1,9 +1,16 @@
 PROJECT (Cavalia)
 file (GLOB SRC_LIST "*.cpp")
-ADD_EXECUTABLE (micro_benchmark ${SRC_LIST})
-
+set(micro_libs mimalloc-static liblz4.a libnuma.a libpapi.a libboost_thread.a pthread rt)
 # TARGET_LINK_LIBRARIES (micro_benchmark libjemalloc.so libcityhash.so libpapi.so boost_system boost_date_time libboost_thread)
-TARGET_LINK_LIBRARIES (micro_benchmark jemalloc_pic database_static liblz4.a libnuma.a libpapi.a libboost_thread.a pthread rt)
-INSTALL (TARGETS micro_benchmark
+
+ADD_EXECUTABLE (micro_benchmark_occ ${SRC_LIST})
+TARGET_LINK_LIBRARIES (micro_benchmark_occ database_occ_static ${micro_libs})
+INSTALL (TARGETS micro_benchmark_occ
+	RUNTIME DESTINATION bin
+)
+
+ADD_EXECUTABLE (micro_benchmark_silo ${SRC_LIST})
+TARGET_LINK_LIBRARIES (micro_benchmark_silo database_silo_static ${micro_libs})
+INSTALL (TARGETS micro_benchmark_silo
 	RUNTIME DESTINATION bin
 )
