--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,7 +17,17 @@ INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Common)
 INCLUDE_DIRECTORIES (${PROJECT_SOURCE_DIR}/Database)
 
 add_subdirectory(ThirdParty/libcuckoo)
+add_subdirectory(ThirdParty/oneTBB)
 ADD_SUBDIRECTORY (Database)
 ADD_SUBDIRECTORY (TpccBenchmark)
 ADD_SUBDIRECTORY (MicroBenchmark)
 ADD_SUBDIRECTORY (SmallbankBenchmark)
+
+add_executable(test_tbb_concurrent_hash ${CMAKE_CURRENT_SOURCE_DIR}/tests/test_tbb_concurrent_hash.cpp)
+target_link_libraries(test_tbb_concurrent_hash TBB::tbb)
+set(tbb_shm_inc_dir
+	${CMAKE_CURRENT_SOURCE_DIR}/../../deps/interprocess
+	${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/oneTBB/include/
+	${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/libcuckoo/
+)
+target_include_directories(test_tbb_concurrent_hash PRIVATE "$<BUILD_INTERFACE:${tbb_shm_inc_dir}>")
